<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

<!--  Contains the two numbers to be used in calculations  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="100">

<!--    Number A    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="50">

            <TextView
                android:id="@+id/label_number_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/label_number_a" />

            <!--     We will only allow signed integer input for this example      -->
            <EditText
                android:id="@+id/editText_number_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"
                />
        </LinearLayout>

<!--    Number B    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="50">

            <TextView
                android:id="@+id/label_number_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/label_number_b" />

            <!--     We will only allow signed integer input for this example      -->
            <EditText
                android:id="@+id/editText_number_b"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned"  />
        </LinearLayout>

    </LinearLayout>

<!--  Contains 4 operand buttons  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="25"
            android:text="@string/op_add" />

        <Button
            android:id="@+id/button_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="25"
            android:text="@string/op_subtract" />

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="25"
            android:text="@string/op_multiply" />

        <Button
            android:id="@+id/button_divide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="25"
            android:text="@string/op_divide" />

    </LinearLayout>

<!--  This contains the result (and its label)  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="horizontal"
        android:weightSum="100">

        <!--  Result will be placed here  -->
        <TextView
            android:id="@+id/label_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:layout_weight="50"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="@string/label_answer" />

        <TextView
            android:id="@+id/text_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="50"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text="" />
    </LinearLayout>


</LinearLayout>

